@@ -5,6 +5,7 @@ Fixed bug  913: SignatureDeclareThrowsException is raised twice
 Fixed bug 1012: False positive: Useless parentheses.
 Fixed bug 1020: Parsing Error
 Fixed bug 1026: PMD doesn't handle 'value =' in SuppressWarnings annotation
+Fixed bug 1028: False-positive: Compare objects with equals for Enums
 Fixed bug 1037: Facing a showstopper issue in PMD Report Class (report listeners)
 Fixed bug 1043: node.getEndLine() always returns 0 (ECMAscript)
 Fixed bug 1044: Unknown option: -excludemarker
